refactor: streamline item sorting and improve spawner configuration loading